<resources>
    <string name="app_name">Regame</string>
    <string name="start_listening">Start listening</string>
    <string name="stop_listening">Stop listening</string>
    <string name="say_something">Say</string>
    <string name="introduction">Tap on one of the buttons to try an action</string>
    <string name="tts_hint">Write something to speech</string>
    <string name="repeat">Repeat please</string>
    <string name="input_something">Please input something to speak!</string>
    <string name="speech_not_available">Speech recognition is not available on this device. Do you want to install Google app to have speech recognition?</string>
    <string name="permission_required">You need to grant the permission to use the microphone</string>
    <string name="enable_google_voice_typing">Please enable Google Voice Typing to use speech recognition!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_stt_langs">Set Speech To Text Language</string>
    <string name="set_tts_voices">Set Text To Speech Voice</string>
    <string name="no_langs">No languages are currently available on this device</string>

    <string name="no_tts_voices">No supported voices or you\'re running on Android API &lt; 23, which does not support querying for voices.</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_subject">CreateSubjectActivity</string>
    <string name="score_no">Score</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cross_image_content_description">Delete games from SQLite database</string>
    <string name="empty_student_list_message">No Scores!</string>
    <string name="student_name">Name</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="all_delete">All Delete</string>
    <string name="edit_button_description">Edit game information</string>
    <string name="sign_up">Sign up</string>
    <string name="id_number">ID number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>

    <!--error messages-->
    <string name="name_error">Invalid name</string>
    <string name="id_error">Invalid ID number</string>
    <string name="email_error">Invalid Email</string>
    <string name="password_error">Invalid password, must be minimum of 6 chars</string>
    <string name="dont_have_an_account_yet">Dont have an account yet?</string>
</resources>
